feat(c): add string and int_array conversion support
* Implemented conversion for `string` and `int_array` types in `str_convert_to`.
* Enhanced `convert_to_string` to handle `string` and `int_array` types.
* Updated launch and task configurations for improved debugging experience.
* Added VSCode settings for file associations.

Signed-off-by: benshi <807629978@qq.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,15 +5,23 @@
             "label": "C/C++: clang build active file",
             "command": "/usr/bin/clang",
             "args": [
-                "-fcolor-diagnostics",
-                "-fansi-escape-codes",
+                // "-fcolor-diagnostics",
+                // "-fansi-escape-codes",
+                // "-finput-charset=UTF-8",
+                // "-fexec-charset=UTF-8",
+                // "-std=c99",
+                // "-Wall",
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/${fileBasenameNoExtension}",
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "${fileDirname}",
+                "env": {
+                    "LANG": "zh_CN.UTF-8",
+                    "LC_ALL": "zh_CN.UTF-8"
+                }
             },
             "problemMatcher": [
                 "$gcc"
