feat(java): add string conversion utilities and main class
* Implemented `StringUtils` with methods for converting objects to strings and vice versa.
* Added main class to demonstrate usage of conversion methods.
* Updated `.gitignore` to exclude Python cache files.
* Created a Makefile for Python project to streamline execution and compilation checks.
* Enhanced Python `convert_to_string` function to handle lists and various types.

Signed-off-by: benshi <807629978@qq.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,27 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "j.Main",
+            "projectName": "string_utils_90bb04fa"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "java_code.Main",
+            "projectName": "string_utils_90bb04fa"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "java.Main",
+            "projectName": "string_utils_90bb04fa"
+        },
+        {
             "name": "C/C++: clang build and debug active file",
             "type": "cppdbg",
             "request": "launch",
